# battle-ai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/tictactoe/: README.md  jane.py
src/games/tictactoe/: README.md  game.py  main.py
tests/tictactoe/: bot1.py  test_map.py  test_ui.py
