[tool.poetry]
name = "battle-ai"
version = "0.1.0"
description = ""
authors = ["Michael Reynaldo Phangtriastu <mikaelphang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pydantic = "^1.10.2"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["*/src/games/*/main.py", "*/tests/**", "*/__init__.py", "*/examples/**"]